# pitaya_smoothie

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PItaya milkshake.tmTheme  PItaya_smoothie.tmTheme  Pitaya milkshake.tmTheme  README.md  index.html  package.json  pitaya_milkshake.tmTheme  pyproject.toml  stylesheet.css  vsc-extension-quickstart.md
.github/workflows/: deploy.yml  publish-extension.yml
.ipynb_checkpoints/: CHANGELOG-checkpoint.md  README-checkpoint.md  package-checkpoint.json
demo-scripts/: .editorconfig  1_Utility_and_Best responses_to_memory-one_players.ipynb  Cpp.cpp  Dockerfile  JavaScript.js  R.R  README copy.md  bash.sh  checkbox_with_labels.test.js  clojure.clj  cplusplus-header.h  cplusplus-source.cc  cs.cs  css.css  dart-flutter.dart  dart.dart  deploy.json  dot.env  dummy.md  fortran.f90  fs.fs  go.go  html.html  ini.ini  json.json  julia.jl  latex.tex  makefile  markdown.md  markdown.test.md  md.md  php.php  pug.pug  python.py  rb.rb  react.js  rst.rst  sass.sass  scala.scala  scss.scss  (+5 more)
demo-scripts/palette-helpers/: palette.ipynb  solid.json  transparent.json
demo-scripts/palette-helpers/.ipynb_checkpoints/: palette-checkpoint.ipynb
pitaya-smoothie/: CHANGELOG.md  README.md
pitaya-smoothie/themes/: Pitaya smoothie-color-theme.json
themes/: Copy-italic.json  Pitaya smoothie-color-theme-noitalic.json  Pitaya smoothie-color-theme.json  Pitaya-smoothie-color-theme-noitalic.json  Pitaya-smoothie-color-theme.json  pitaya_milkshake.tmTheme  pitaya_smoothie.tmTheme
